[tool.poetry]
name = "ray-stock"
version = "0.1.0"
description = ""
authors = ["maxiee <maxieewong@gmail.com>"]
readme = "README.md"
packages = [{include = "ray_stock"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
